# netective

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  README.rst  freyrelab_imports.txt  memoria.py  nodes_0.001_2000.pkl  pyproject.toml  requirements-dev.txt  requirements.txt  scalar_networknorm_0.001_2000.pkl  scalar_raw_0.001_2000.pkl  setup.cfg  setup.py  structural_properties_merenets_er.tsv
Applications/: abasy_characterization_raw copy.ipynb  abasy_models_d_values.csv  metexplorer.ipynb  most_informative_features.txt  sampling_charact.py  sampling_charact_dvalue.py  select_most_informative_props.ipynb  single_cell.py  synthetic_charact.py  synthetic_charact_directed.py  synthetic_characterization.ipynb  synthetic_characterization_directed.ipynb  synthetic_characterization_raw.ipynb
Applications/HumanMouse/: human_analysis.py  human_analysis_nets_info  mouse_analysis.py  mouse_analysis_nets_info
Applications/single_cell/: Table_S3_G3-2022-403885 José Antonio Sánchez Villicaña.xlsx  file_request.txt  single_cell.py
app/: GS.txt  app.py  netectiveweb.py  stats_web.py
app/.streamlit/: config.toml
app2/: Home.py  app_core.py
app2/.streamlit/: config.toml
app2/pages/: 1_Characterize.py  2_Compare.py  3_Benchmark.py  4_Classify.py
docs/: Comand_Line_Tutorial.md  conf.py  d20a6313-01e9-4b56-9788-00b2c679ffcb_dist_props.tsv  d20a6313-01e9-4b56-9788-00b2c679ffcb_scalar_props.tsv  index.rst  module_tutorial.ipynb  module_tutorial_dirty.ipynb  my_props.py
docs/assets/: short_GS.txt
docs/slides/: avances (5 octubre).pptx
docs/source/: modules.rst  netective.cli.rst  netective.stats.rst  netective.structure.rst
experimental/: .coverage  AbasyAPI.ipynb  Assessment_Abasy.ipynb  AvgComputationERs.ipynb  AvgComputationERsAcrossAbasy.ipynb  TestNewStructure.ipynb  app.py  cluster_gen.ipynb  comb_directed_and_und.ipynb  comb_directed_and_und_keepIsolates.ipynb  dissimilarity_abasy_.csv  dvalue.ipynb  dvalue_paral.py  gg.ipynb  hash.ipynb  hash2.ipynb  load_data_graph_classification.ipynb  parallel.ipynb  rand_scores.pkl  rand_scores_isolates.pkl  sampling_gen.ipynb  synthetic_test.ipynb  test_list.py
experimental/.ipynb_checkpoints/: comb_directed_and_und-Copy1-checkpoint.ipynb  comb_directed_and_und_keepIsolates-checkpoint.ipynb
legacy/experimental/: AvgComputationERs.ipynb  PandasIntegration.ipynb  TMP.ipynb  TestNewStructure.ipynb  bugscalars.txt  comb_directed_and_und_keepIsolates.ipynb  directed_nets_may.ipynb  dissimilarity.csv  load_data_graph_classification.ipynb  sampling_gen.ipynb  synthetic_test.ipynb  test_motifs.ipynb  test_motifs_and_efficiency.ipynb
legacy/experimental_stats/: foo.ipynb
legacy/prop_notebooks/: Density_template.ipynb  GlobalEfficiency.ipynb  Human_Analysis.ipynb  In_Degree.ipynb  Locality_Index.ipynb  Mouse_Analysis.ipynb  Out_Degree.ipynb  Pipeline_use.ipynb  Rich_Club_Coefficient.ipynb  Undir_Average_Degree_Nearest_Neighbors.ipynb  bio_nets.ipynb  learning_paths.ipynb  properties_dataframe.ipynb
src/netective/: __init__.py  _utils.py  foo.tsv  logging_info.py  netective_test.py  pipeline.py  properties.py  properties_2.py  run_props.ipynb  stats.py  struct.py  structure.py  utils.py
src/netective.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: struct_test.py  structural_properties_merenets_er_testing.tsv  test_graph_observer.py  test_norm_observer.py
(+73 files in other folders)
