[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netective"
version = "0.5"
authors = [
  { name="Juan Escorcia", email="juanesscorcia@gmail.com" },
  { name="Julio Freyre", email="jfreyreg@gmail.com" },
]
description = "Use structural and standard performance metrics to assess network inference"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/JuanEscorcia/netective.git"

[project.scripts]
netective = "netective:main"