[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netective"
version = "0.9.0"
authors = [
  { name="Juan Miguel Escorcia-Rodríguez", email="juanesscorcia@gmail.com" },
  { name="José Antonio Sánchez-Villicaña", email="josesv@lcg.unam.mx" },
  { name="Julio Augusto Freyre-González", email="jfreyreg@gmail.com" },
  { name="Jocelyn Trujillo-Guitérrez", email= "jocelynt@lcg.unam.mx" }
]
description = "Use structural and standard performance metrics to assess network inference"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPL-3.0-only",
    "Operating System :: OS Independent",
]

dependencies = [
  "igraph==0.10.4",
  "networkx>=2.8.4",
  "numpy>=1.24.3",
  "pandas>=1.5.3",
  "scipy>=1.10.1",
  "seaborn>=0.12.2",
  "tqdm==4.65.0",
  "mpmath>=1.2.1",
  "psutil>=5.9.0",
  "bitarray>=2.9.2"
]

[project.optional-dependencies]
test = ["pytest"]
lint = [ "black"]
cov = ["pytest < 5.0.0", "pytest-cov[all]"]

[project.urls]
"Homepage" = "https://github.com/freyrelab/netective.git"

[project.scripts]
netective = "netective.cli.netective:main"

[tool.pytest.ini_options]
addopts = "--cov=netective"
testpaths = ["tests"]
